--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": "~7.3.0||~7.4.0"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
+    "license": "MIT",
     "autoload": {
         "files": [
             "registration.php"
